# kbot

./: .gitignore  .gitmodules  BUILD.gn  build.sh  vgcore.1139244  vgcore.1139499
docs/: youtube_chat_flow.md
src/: BUILD.gn  main.cpp
src/api/: api.hpp  youtube_constants.hpp  youtube_data_api.hpp
src/api/korean/: korean.cpp  korean.hpp
src/api/nlp/: nlp.cpp  nlp.hpp  types.hpp
src/api/youtube/: api.hpp  constants.cpp  constants.hpp  youtube_api.cpp  youtube_api.hpp
src/bot/blog/: BUILD.gn  blog.hpp  main.cpp
src/bot/blog/util/: util.hpp
src/bot/broker/: BUILD.gn  broker.hpp  channel_port.hpp  ipc.hpp  main.cpp  session_daemon.hpp
src/bot/discord/: BUILD.gn  discord.hpp  main.cpp
src/bot/gettr/: BUILD.gn  gettr.hpp
src/bot/instagram/: BUILD.gn  instagram.hpp  main.cpp
src/bot/kettr/: BUILD.gn  gettr.hpp  main.cpp
src/bot/mastodon/: BUILD.gn  main.cpp  mastodon.hpp
src/bot/matrix/: BUILD.gn  main.cpp  matrix.hpp
src/bot/telegram/: BUILD.gn  main.cpp  telegram.hpp
src/bot/youtube/: BUILD.gn  constants.hpp  main.cpp  types.hpp  youtube.cpp  youtube.hpp
src/interfaces/: interfaces.hpp
src/util/: ipc.hpp  nlp.hpp  process.hpp  util.hpp
src/youtube/: BUILD.gn  main.cpp  types.hpp  youtube.hpp
test/ut_kbot/: BUILD.gn  kbot.test.cpp  kbot.test.hpp  korean.test.cpp  korean.test.hpp  youtube_bot.test.cpp  youtube_bot.test.hpp  youtube_chat.test.cpp  youtube_chat.test.hpp
