all_tests = [
  "//test/ut_kbot"
]

config("cppzmq") {
  include_dirs = [
    "//third_party/cppzmq/",
  ]
}

executable("youtube_bot") {
  public_configs = [ ":cppzmq" ]

  public_deps = [
    "//src/bot/youtube:youtube_bot_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl",
    "zmq"
  ]


  sources = [
    "//src/main.cpp",
  ]
}

group("tests") {
  testonly = true
  deps = all_tests
}
