all_tests = [
  "//test/ut_kbot"
]

config("cppzmq") {
  include_dirs = [
    "//third_party/cppzmq/",
  ]
}

executable("youtube_bot") {
  public_configs = [ ":cppzmq" ]

  public_deps = [
    "//src/bot/youtube:youtube_bot_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl",
    "zmq"
  ]


  sources = [
    "//src/main.cpp",
  ]
}

all_executables = [
  ":youtube_bot",
  "//src/bot/mastodon:mastodon_bot",
  "//src/bot/discord:discord_bot",
  "//src/bot/broker:broker",
  "//src/bot/blog:blog_bot",
]

group("executables") {
  deps = all_executables
}

group("tests") {
  testonly = true
  deps = all_tests
}
