all_tests = [
  "//test/ut_kbot"
]

config("cppzmq") {
  include_dirs = [
    "//third_party/cppzmq/",
  ]
}

all_executables = [
  "//src/bot/youtube:youtube_bot",
  "//src/bot/mastodon:mastodon_bot",
  "//src/bot/discord:discord_bot",
  "//src/bot/broker:broker",
  "//src/bot/blog:blog_bot",
  "//src/bot/telegram:telegram_bot",
  "//src/bot/gettr:gettr_bot",
]

group("executables") {
  deps = all_executables
}

group("tests") {
  testonly = true
  deps = all_tests
}
