# config("cpr_import") {
#   include_dirs = ["//third_party/cpr/include", "//third_party/cpr/build/lib/"]
#   lib_dirs = [ "//third_party/cpr/build/lib/libcpr.so.1"]
#   libs = ["libcpr.so.1", "libcurl.so"]
#   visibility = [ ":cpr" ]
# }

# group("cpr") {
#   public_configs = [
#     ":cpr_import"
#   ]
# }

source_set("youtube_bot_sources") {

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

}

