executable("ut_kbot") {

  public_deps = [
    "//src/bot/youtube:youtube_bot_sources"
  ]
  testonly = true

  libs = [
    "pthread",
    "cpr"
  ]


  deps = [

    "//test:gtest_main",
    "//test:gtest_and_gmock"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  sources = [
    #"youtube_bot.test.cpp"
    "youtube_chat.test.cpp",
    "korean.test.cpp",
  ]
}
