
executable("blog_bot") {
  public_configs = [
    "//src/bot/youtube:inih",
    "//src/bot/discord:cpr"
  ]

  deps = [
    "//src/bot/youtube:ini_reader",
  ]
  include_dirs = [
    "//src/"
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
    "pthread"
  ]

  sources = [
    "//src/bot/blog/main.cpp"
  ]
}