executable("blog_bot") {
  public_configs = [
    "//src/bot/youtube:inih"
  ]

  deps = [
    "//src/bot/youtube:ini_reader",
  ]

  public_deps = [
    "//src/bot/broker:cpr_lib",
    "//src/bot/broker:klogger"
  ]

  include_dirs = [
    "//src/"
  ]

  sources = [
    "//src/bot/blog/main.cpp"
  ]
}
