config("cpr_library") {
  include_dirs = [cpr_include]
  libs = ["cpr"]
  visibility = [ ":cpr_lib" ]
}

group("cpr_lib") {
  public_configs = [":cpr_library"]
}

executable("broker") {
public_configs = [
  "//:cppzmq",
  "//src/bot/mastodon:kstodon",
  "//src/bot/mastodon:nlp",
  "//src/bot/discord:kscord",
  "//src/bot/telegram:keleqram",
  "//src/bot/matrix:katrix",
  "//src/bot/kettr:kettr",
]

libs = [ "zmq" ]

include_dirs = [
  "//third_party/inih/cpp",
  "//third_party/json/include",
  "//third_party/kjson"
]

deps = [
  "//src/bot/matrix:katrix_lib",
  "//src/bot/youtube:ktube_lib",
  "//src/bot/discord:kscord_lib",
  "//src/bot/mastodon:kstodon_lib",
  "//src/bot/telegram:keleqram_lib",
  "//src/bot/kettr:kettr_lib",
  "//src/bot/youtube:youtube_bot_sources",
]

public_deps = [":cpr_lib"]

sources = [
  "//src/bot/broker/main.cpp"
]

}
