
config("kettr") {
  include_dirs = [
    "//third_party/kettr/src",
    "//third_party/katrix/third_party/kutils/include",
    "//third_party/json/include"
  ]

  libs = [
    "//third_party/kettr/build/libkettr.a",
  ]

  visibility = [ ":kettr_lib" ]
}


group("kettr_lib") {
  public_configs = [
    ":kettr",
  ]

  public_deps = [
    "//src/bot/broker:cpr_lib",
    "//src/bot/youtube:inih_lib"
  ]

}

executable("gettr_bot") {

deps = [
  ":kettr_lib",
]

public_deps = [
  "//src/bot/broker:klogger"
]

include_dirs = [
    "//src/"
]

sources = [
  "//src/bot/gettr/main.cpp"
]

}