
config("kstodon") {
  include_dirs = ["//third_party/kstodon/src", "//third_party/kstodon/third_party/kjson"]
  libs = ["//third_party/kstodon/out/libkstodon_lib.so"]
  visibility = [ ":kstodon_lib" ]
}

config("nlp") {
  include_dirs = [
    "//src/api/nlp",
  ]
}

config("cpr") {
  include_dirs = [
    "//third_party/cpr/include"
  ]
  libs = [
    "//third_party/kettr/third_party/cpr/build/lib/libcpr.so",
  ]
}

config("kbot_includes") {
  include_dirs = [
    "//src/"
  ]
}


group("kstodon_lib") {
  public_configs = [
    ":kstodon",
    ":kbot_includes",
    ":cpr",
  ]
}

executable("mastodon_bot") {
public_configs = [
  ":nlp",
  "//src/bot/youtube:kjson",
  "//src/bot/youtube:inih",
]

deps = [
  ":kstodon_lib"
]

sources = [
  "//src/bot/mastodon/main.cpp"
]

}