
config("katrix") {
  include_dirs = [
    "//third_party/katrix/src",
    "//third_party/katrix/third_party/mtxclient/include",
    "//third_party/katrix/third_party/kutils/include",
    "//third_party/katrix/build/_deps/coeurl-src/include",
    "//third_party/json/include"
  ]

  libs = [
    "//third_party/katrix/build/libkatrix.a",
    "//third_party/katrix/build/third_party/mtxclient/libmatrix_client.so"
  ]

  visibility = [ ":katrix_lib" ]
}

group("katrix_lib") {
  public_configs = [
    ":katrix",
    "//src/bot/kettr:cpr",
    "//src/bot/youtube:inih",
  ]

  deps = [
    "//src/bot/youtube:inih_lib"
  ]
}

executable("matrix_bot") {

deps = [
  ":katrix_lib",
]

include_dirs = [
    "//src/"
]

sources = [
  "//src/bot/matrix/main.cpp"
]

}