
config("katrix") {
  include_dirs = [
    "//third_party/katrix/src",
    "//third_party/katrix/third_party/mtxclient/include",
    "//third_party/katrix/third_party/kutils/include",
    "//third_party/katrix/build/_deps/coeurl-src/include",
    "//third_party/json/include"
  ]

  libs = [
    "//third_party/katrix/build/libkatrix.a",
#    "//third_party/katrix/third_party/mtxclient/build/_deps/coeurl-build/libcoeurld.so",
    "//third_party/katrix/third_party/mtxclient/build/libmatrix_clientd.so",
    "bsd",
    "olm"
  ]

  visibility = [ ":katrix_lib" ]
}

group("katrix_lib") {
  public_configs = [
    # ":katrix",
    "//src/bot/youtube:inih",
  ]

  deps = [
    "//src/bot/youtube:inih_lib"
  ]

  public_deps = ["//src/bot/broker:cpr_lib"]
}

executable("matrix_bot") {

deps = [
  ":katrix_lib",
]

libs = ["zmq"]

public_deps = [
  "//src/bot/broker:klogger"
]

include_dirs = [
    "//src/"
]

sources = [
  "//src/bot/matrix/main.cpp"
]

}
