group("katrix_lib") {
  public_configs = [
    "//src/bot/youtube:inih",
  ]

  deps = [
    "//src/bot/youtube:inih_lib"
  ]

  public_deps = ["//src/bot/broker:cpr_lib"]
}

executable("matrix_bot") {

deps = [
  ":katrix_lib",
]

libs = ["zmq"]

public_deps = [
  "//src/bot/broker:klogger"
]

include_dirs = [
    "//src/",
    "//third_party/kproto/include/kproto"
]

sources = [
  "//src/bot/matrix/main.cpp"
]

}
