
config("keleqram") {
  include_dirs = ["//third_party/keleqram/src", "//third_party/kstodon/third_party/kjson", "//third_party/keleqram/third_party/tgbot-cpp/include"]
  libs = [
    "//third_party/keleqram/libkeleqram.a",
    "//third_party/keleqram/third_party/tgbot-cpp/libTgBot.so"
  ]
  visibility = [ ":keleqram_lib" ]
}

config("nlp") {
  include_dirs = [
    "//src/api/nlp",
  ]
}

config("kbot_includes") {
  include_dirs = [
    "//src/"
  ]
}

group("keleqram_lib") {
  public_configs = [
    ":keleqram",
    ":kbot_includes"
  ]
}

executable("telegram_bot") {
public_configs = [
  ":nlp",
  "//src/bot/youtube:kjson",
  "//src/bot/youtube:inih",
]

deps = [
  ":keleqram_lib",
  "//src/bot/youtube:inih_lib"
]

public_deps = ["//src/bot/broker:cpr_lib"]

sources = [
  "//src/bot/telegram/main.cpp"
]

}
