config("inih") {
  include_dirs = [
    "//third_party/inih/cpp",
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp",
  ]
}

source_set("youtube_api") {
  public_configs = [
    ":inih",
    ":json"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/api/youtube/youtube_api.cpp"
  ]
}

source_set("nlp") {
  sources = [
    "//src/api/nlp/nlp.cpp"
  ]
}

source_set("korean") {

  public_configs = [
    ":inih",
    ":json"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  sources = [
    "//src/api/korean/korean.cpp"
  ]

}

source_set("youtube_bot_sources") {

  public_configs = [
    ":inih",
    ":json"
  ]

  deps = [
    ":ini_reader",
    ":youtube_api",
    ":nlp",
    ":korean"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

  sources = [
    "youtube.cpp",
  ]
}

