config("inih") {
  include_dirs = [
    "//third_party/inih/cpp",
  ]
}

config("json") {
  include_dirs = [
    "//third_party/json/include",
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp",
  ]
}

source_set("youtube_api_sources") {
  public_configs = [
    ":inih",
    ":json"
  ]

  include_dirs = [
    "//src",
  ]

  sources = [
    "//src/api/youtube/youtube_api.cpp"
  ]
}

source_set("nlp_sources") {
  sources = [
    "//src/api/nlp/nlp.cpp"
  ]
}

source_set("korean") {

  public_configs = [
    ":inih",
    ":json"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  sources = [
    "//src/api/korean/korean.cpp"
  ]

}

shared_library("youtube_api") {
  deps = [
    ":youtube_api_sources",
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]
}

shared_library("nlp") {

  deps = [
    ":nlp_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]
}

source_set("youtube_bot_sources") {

  public_configs = [
    ":inih",
    ":json"
  ]

  deps = [
    ":ini_reader",
    ":youtube_api_sources",
    ":nlp_sources",
    ":korean"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl"
  ]

  sources = [
    "youtube.cpp",
  ]
}

