config("process_executor") {
  include_dirs = [
    "//third_party/process_executor"
  ]
}

config("psql_config") {
  include_dirs = ["//third_party/psql_orm/src"]

  libs = [
    "//third_party/psql_orm/libpsqlorm.a",
    "/usr/local/lib/libpqxx.a",
    "pq",
    "pqxx"
  ]
}

source_set("korean") {
  public_configs = [
    ":inih",
    ":kjson"
  ]

  include_dirs = [
    "//src",
    "//third_party/",
  ]

  sources = [
    "//src/api/korean/korean.cpp"
  ]
}

config("inih") {
  include_dirs = [
    "//third_party/inih/cpp",
  ]
}

config("kjson") {
  include_dirs = [
    "//third_party/json/include",
    "//third_party/kjson",
  ]
}

source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp",
  ]
}

group("inih_lib") {
  deps = [
    ":ini_reader"
  ]
  public_configs = [
    ":inih"
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("ktube") {
  include_dirs = [
    "//third_party/ktube/src",
    "//third_party/ktube/third_party/kjson"
  ]

  libs = ["//third_party/ktube/out/libktube_lib.so"]
}

group("ktube_lib") {
  public_configs = [
    ":ktube"
  ]
}

config("knlp") {
  include_dirs = ["//third_party/knlp/src"]
  libs = ["//third_party/knlp/out/libknlp.so"]
}

group("knlp_lib") {
  public_configs = [
    ":knlp"
  ]
}

source_set("youtube_bot_sources") {
  public_configs = [
    ":html",
    ":inih",
    ":kjson",
    ":ktube",
    ":knlp",
    ":process_executor",
    ":psql_config",
    "//src/bot/kettr:cpr"
  ]
  deps = [
    ":ini_reader",
    ":ktube_lib",
    ":knlp_lib",
    ":korean",
  ]
  include_dirs = [
    "//src",
    "//third_party/",
  ]
  # libs = [
  #   "cpr"
  # ]
  sources = [
    "youtube.cpp",
  ]
}


executable("youtube_bot") {
  public_deps = [
    ":youtube_bot_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  sources = [
    "main.cpp"
  ]
}